cluster/apps/external/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: external
spec:
  type: ExternalName
  externalName: "${NAS_ADDR}"
  ports:
    - port: 8080
