cluster/apps/external/qbittorrent/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: "https://avatars.githubusercontent.com/u/2131270"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns/is-public: "true"
  name: qbittorrent
  namespace: external
spec:
  rules:
    - host: "torrent.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
  tls:
    - hosts:
        - "torrnet.${SECRET_DOMAIN}"
      secretName: qbittorrent-cert
